--- a/app.css
+++ b/app.css
@@ -29,3 +29,62 @@ label {
  .left {
   display:inline-block;
  }
+
+ button {
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+ }
+
+.btn_copy_customer_data {
+  background: #feda71;
+  background: -webkit-gradient(linear, 0 0, 0 bottom, from(#feda71), to(#febe4d));
+  background: -moz-linear-gradient(#feda71, #febe4d);
+  background: linear-gradient(#feda71, #febe4d);
+  border: solid 1px #eab551;
+  border-bottom: solid 3px #b98a37;
+  box-shadow: inset 0 0 0 1px #fee9aa;
+  color: #996633;
+  text-shadow: 0 1px 0 #fedd9b;
+}
+
+.btn_copy_customer_data:hover {
+  background: #fec455;
+  background: -webkit-gradient(linear, 0 0, 0 bottom, from(#fec455), to(#fecd61));
+  background: -moz-linear-gradient(#fec455, #fecd61);
+  background: linear-gradient(#fec455, #fecd61);
+  border: solid 1px #e6a93d;
+  border-bottom: solid 3px #b98a37;
+  box-shadow: inset 0 0 0 1px #fedb98;
+}
+
+.btn_pagination {
+  -moz-box-shadow: inset 0 0 0 1px #63ad0d;
+  -webkit-box-shadow: inset 0 0 0 1px #63ad0d;
+  background: #eee;
+  background: -webkit-gradient(linear, 0 0, 0 bottom, from(#eee), to(#e2e2e2));
+  background: -moz-linear-gradient(#eee, #e2e2e2);
+  background: linear-gradient(#eee, #e2e2e2);
+  border: solid 1px #d0d0d0;
+  border-bottom: solid 3px #b2b1b1;
+  box-shadow: inset 0 0 0 1px #f5f5f5;
+  color: #555;
+  display: inline-block;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  text-shadow: 0 1px 0 #fafafa;
+}
+
+.btn_pagination:hover {
+  background: #e4e4e4;
+  background: -webkit-gradient(linear, 0 0, 0 bottom, from(#e4e4e4), to(#ededed));
+  background: -moz-linear-gradient(#e4e4e4, #ededed);
+  background: linear-gradient(#e4e4e4, #ededed);
+  border: solid 1px #c2c2c2;
+  border-bottom: solid 3px #b2b1b1;
+  box-shadow: inset 0 0 0 1px #efefef;
+}
+
+.pagination_text {
+  padding-left: 60px;
+}
