- added alert and notes to user object, and display them - can't get notes over 2 lines :(

--- a/app.css
+++ b/app.css
@@ -30,6 +30,10 @@ label {
   display:inline-block;
  }
 
+ .customerAlert {
+  color: #FF0000;
+ }
+
  button {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
